Refs #23703 - fix Show all columns alignment

--- a/modules/edw_themes/modules/edwt_backend/css/manage-documents.css
+++ b/modules/edw_themes/modules/edwt_backend/css/manage-documents.css
@@ -49,3 +49,7 @@
 .view-display-id-pre_session_order .dropbutton-widget .dropbutton--gin {
     padding-left: 0;
 }
+
+.tableresponsive-toggle {
+  margin-left: 20px!important;
+}
